# KG-File-Search

./: .gitignore  AGENTS.md  CHANGELOG.md  KGFS_Advanced_Roadmap_Canvas.md  README.md  config.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  optional_model_backend_issue.yml  packaging_install_issue.yml  search_quality_issue.yml  security_privacy_concern.yml
.github/workflows/: ci.yml  package.yml
docs/: README.md  api.md  architecture.md  cli.md  data-model.md  development.md  examples.md  features.md  integrations.md  kgfs-vs-os-search.md  known-limitations.md  local-models.md  optional-dependencies.md  overview.md  roadmap.md  security.md  settings.md  troubleshooting.md  usage.md
examples/sample-corpus/: README.md  calibration-copy-b.txt  crossover-summary.md  motor-lab-draft.md  motor-lab-final.md  motor-lab-notes.md  op-amp-gain.txt  sensor-data.csv
kgfs/: __init__.py  __main__.py  ai.py  app_dirs.py  capabilities.py  cli.py  config.py  config_commands.py  database.py  file_discovery.py  file_filters.py  hashing.py  indexing.py  migrations.py  models.py  path_utils.py  platform_utils.py  prune.py  quickstart.py  reset.py  resources.py  safety.py  search.py  semantic.py  snippets.py  version.py
kgfs/api/: __init__.py  app.py  auth.py  models.py  routes.py
kgfs/cli/: __init__.py  app.py  shared.py
kgfs/cli/commands/: assignment.py  capabilities.py  collections.py  compare.py  config.py  db.py  deep.py  doctor.py  duplicates.py  folders.py  graph.py  health.py  index.py  init.py  integrations.py  maintenance.py  media.py  metadata.py  models.py  notes.py  ocr.py  open_reveal.py  profiles.py  projects.py  quickstart.py  research.py  saved_searches.py  search.py  semantic.py  serve.py  similar.py  stats.py  tags.py  timeline.py  tui.py  vector.py  version.py  versions.py  web.py  why.py
kgfs/core/: __init__.py  app_dirs.py  config.py  config_commands.py  models.py  path_utils.py  platform_utils.py  resources.py  safety.py
kgfs/db/: __init__.py  checks.py  connection.py  latest_results.py  migrations.py  repositories.py  schema.py  stats.py
kgfs/extractors/: __init__.py  base.py  code.py  csv.py  docx.py  image_ocr.py  markdown.py  pdf.py  text.py
kgfs/indexing/: __init__.py  discovery.py  filters.py  hashing.py  indexer.py  prune.py
kgfs/integrations/: __init__.py  alfred.py  explorer.py  finder.py  powertoys.py  raycast.py  status.py  tray.py
kgfs/intelligence/: __init__.py  duplicates.py  export.py  graph.py  health.py  models.py  projects.py  versions.py
kgfs/media/: __init__.py  audio.py  cache.py  captions.py  exif.py  metadata.py  models.py  registry.py  status.py  visual.py
kgfs/models/: __init__.py  base.py  benchmark.py  doctor.py  paths.py  recommend.py  registry.py  snippets.py  status.py  storage.py  testing.py  validation.py
kgfs/ocr/: __init__.py  base.py  cache.py  cloud.py  easyocr.py  paddle.py  pdf.py  preprocessing.py  registry.py  status.py  tesseract.py
kgfs/search/: __init__.py  citations.py  compare.py  deep.py  engine.py  explain.py  filters.py  hybrid.py  keyword.py  options.py  query.py  ranking.py  registry.py  research.py  result.py  semantic.py  similar.py  snippets.py  timeline.py
kgfs/search/backends/: __init__.py  (+7 more)
kgfs/tui/: __init__.py  actions.py  app.py  state.py  widgets.py
kgfs/vectors/: __init__.py  backend_index.py  benchmark.py  chunks.py  embeddings.py  index_manager.py  metadata.py  recommend.py  status.py  storage.py
kgfs/web/: __init__.py  app.py
kgfs/workflows/: __init__.py  assignments.py  collections.py  models.py  notes.py  profiles.py  projects.py  saved_searches.py  tags.py
packaging/: README-packaging.md  README.md
packaging/pyinstaller/: kgfs.spec
scripts/: __init__.py  build_package.py  check_docs_consistency.py  generate_checksums.py  release_check.py  smoke_test_packaged.py
tests/: test_ai.py  test_app_dirs.py  test_ci_workflow.py  test_cli.py  test_config.py  test_config_commands.py  test_extractors.py  test_file_discovery.py  test_file_filters.py  test_indexing.py  test_migrations.py  test_ocr_backend.py  test_ocr_cache.py  test_ocr_cli.py  test_ocr_config.py  test_ocr_indexing.py  test_ocr_pdf.py  test_packaging_scripts.py  test_path_utils.py  test_phase10_1_local_models.py  test_phase10_2_local_model_setup.py  test_phase10_media.py  test_phase6_advanced_search.py  test_phase7_workflows.py  test_phase8_file_intelligence.py  test_phase9_ux_integrations.py  test_platform_boundary.py  test_platform_utils.py  test_project_structure.py  test_prune.py  test_ranking.py  test_release_candidate_prep.py  test_release_readiness.py  test_reset_rebuild.py  test_resources.py  test_safety.py  test_search.py  test_search_filters.py  test_search_kernel.py  test_semantic.py  (+12 more)
tests/fixtures/: smoke_config.yaml
(+20 files in other folders)
