[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-file-search"
version = "0.1.0"
description = "KG File Search: local-first semantic and keyword file search."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "KGFS" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "platformdirs>=4.2",
  "PyYAML>=6.0",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
]
semantic = [
  "sentence-transformers>=2.7",
]

[project.scripts]
kgfs = "kgfs.cli:app"

[tool.setuptools.packages.find]
include = ["kgfs*"]

[tool.setuptools.package-data]
"kgfs.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

