[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-file-search"
dynamic = ["version"]
description = "KG File Search: local-first semantic and keyword file search."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "KGFS" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "platformdirs>=4.2",
  "PyYAML>=6.0",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "pytest-cov>=5.0",
  "ruff>=0.8.0",
  "mypy>=1.13",
]
semantic = [
  "sentence-transformers>=2.7",
]
ocr = [
  "pillow>=10",
]
photo = [
  "pillow>=10",
]
exif = [
  "pillow>=10",
]
media = [
  "pillow>=10",
]
ocr-easyocr = [
  "easyocr>=1.7",
]
ocr-paddle = [
  "paddleocr>=2.7",
]
multimodal = [
  "pillow>=10",
]
sqlite-vec = [
  "sqlite-vec>=0.1.6",
]
hnsw = [
  "hnswlib>=0.8.0",
  "numpy>=1.26",
]
faiss = [
  "faiss-cpu>=1.8.0",
]
advanced-search = [
  "sentence-transformers>=2.7",
  "sqlite-vec>=0.1.6",
  "hnswlib>=0.8.0",
  "numpy>=1.26",
]
openai = [
  "openai>=1.68.0",
]
tui = [
  "textual>=0.80",
]
tray = [
  "pystray>=0.19",
  "pillow>=10",
]
package = [
  "pyinstaller>=6.6",
]

[project.scripts]
kgfs = "kgfs.cli:app"

[tool.setuptools.packages.find]
include = ["kgfs*"]

[tool.setuptools.dynamic]
version = { attr = "kgfs.version.__version__" }

[tool.setuptools.package-data]
"kgfs.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  ".kgfs",
  ".pytest-tmp",
  ".pytest_cache",
  "build",
  "dist",
  "dist-packages",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = [
  "kgfs/version.py",
  "kgfs/quickstart.py",
  "kgfs/capabilities.py",
  "kgfs/db/checks.py",
  "scripts/check_docs_consistency.py",
]
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.coverage.run]
branch = true
source = ["kgfs"]
omit = [
  "kgfs/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
